--- a/menu_attach_block.css
+++ b/menu_attach_block.css
@@ -41,7 +41,8 @@ a.menu-attach-block-drop-link:hover,
 a.menu-attach-block-drop-link:focus,
 #main-menu a.menu-attach-block-drop-link,
 #main-menu a.menu-attach-block-drop-link:hover,
-#main-menu a.menu-attach-block-drop-link:focus {
+#main-menu a.menu-attach-block-drop-link:focus,
+#main-menu-links li.active-trail a.menu-attach-block-drop-link{
   background: transparent url("arrow-asc.png") no-repeat scroll 2px;
   border: 0;
   display: inline-block;
