--- a/menu_attach_block.css
+++ b/menu_attach_block.css
@@ -11,7 +11,13 @@ div.messages.status.block {
   margin: 0 8px;
   padding: 2px 8px;
 }
-
+div.messages.status.block::before {
+    background-image: none;
+}
+div.messages.status::before {
+    background-color: inherit;
+    z-index: -9999;
+}
 .menu-attach-block-wrapper.orientation-horizontal {
   position: relative;
 }
